<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="location"
            type="com.nora.rickscrate.domain.model.Location" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_location_container"
        style="@style/Rick.MaterialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/location_type_tv"
                style="@style/Rick.TextView.body_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:unknownIfEmpty="@{location.type}"
                tools:text="@string/label_location_type" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/location_name_tv"
                style="@style/Rick.TextView.body_viewsStart"
                android:layout_width="@dimen/width_height_no_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:gravity="center_vertical"
                android:text="@{location.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_type_tv"
                tools:text="@string/label_origin_details" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/where_the_place_tv"
                style="@style/Rick.TextView.body_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/label_where_the_place_is"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_name_tv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/location_tv"
                style="@style/Rick.TextView.body_main_small"
                android:layout_width="@dimen/width_height_no_size"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:text="@{location.dimension}"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toBottomOf="@+id/where_the_place_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/where_the_place_tv"
                app:layout_constraintTop_toTopOf="@+id/where_the_place_tv"
                tools:text="@string/label_location" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>