<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="character"
            type="com.nora.rickscrate.domain.model.Character" />

        <variable
            name="listener"
            type="com.nora.rickscrate.ui.screen.character.CharacterListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_character_container"
        style="@style/Rick.MaterialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        android:onClick="@{(view) -> listener.onItemClicked(view, character)}"
        android:transitionName="@{character.name}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_normal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/character_iv"
                android:layout_width="@dimen/width_height_no_size"
                android:layout_height="@dimen/width_height_no_size"
                android:scaleType="centerCrop"
                app:imageSrc="@{character.image}"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_name_tv"
                style="@style/Rick.TextView.body_main"
                android:layout_width="@dimen/width_height_no_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:gravity="center"
                android:text="@{character.name}"
                app:layout_constraintEnd_toEndOf="@id/guild_end"
                app:layout_constraintStart_toStartOf="@id/guild_start"
                app:layout_constraintTop_toBottomOf="@id/character_iv"
                tools:text="@string/label_character_name" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_name"
                android:layout_width="@dimen/width_height_no_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                app:layout_constraintBottom_toTopOf="@id/character_gender_tv"
                app:layout_constraintEnd_toEndOf="@id/guild_end"
                app:layout_constraintStart_toStartOf="@id/guild_start"
                app:layout_constraintTop_toBottomOf="@id/character_name_tv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_gender_tv"
                style="@style/Rick.TextView.body_small"
                android:layout_width="@dimen/width_height_no_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_short"
                android:text="@{character.gender}"
                app:layout_constraintEnd_toEndOf="@id/guild_end"
                app:layout_constraintStart_toStartOf="@id/guild_start"
                app:layout_constraintTop_toBottomOf="@id/divider_name"
                tools:text="@string/label_gender" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/character_species_tv"
                style="@style/Rick.TextView.body_main_small"
                android:layout_width="@dimen/width_height_no_size"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_short"
                android:text="@{character.species}"
                app:layout_constraintEnd_toEndOf="@id/guild_end"
                app:layout_constraintStart_toStartOf="@id/guild_start"
                app:layout_constraintTop_toBottomOf="@id/character_gender_tv"
                tools:text="@string/label_species" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guild_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/spacing_normal" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guild_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/spacing_normal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>


